# vaultspeed-docker

./: .env  .gitignore  README.md  docker-compose.yml
agent/: Dockerfile
agent/conf/: client.properties  connections.properties  logging.properties
airflow/: Dockerfile
airflow/plugins/vs_fmc_plugin/: README.md  __init__.py  requirements.txt  setup.cfg
airflow/plugins/vs_fmc_plugin/hooks/: jdbc_hook.py  kafka_hook.py  matillion_hook.py  odi_hook.py  spark_sql_hook.py  talend_hook.py
airflow/plugins/vs_fmc_plugin/operators/: Matillion_operator.py  db_table.py  external_dag_checker.py  external_dags_sensor.py  jdbc_operator.py  jdbc_to_jdbc.py  jdbc_to_xcom.py  kafka_to_jdbc.py  odi_operator.py  run_once.py  spark_sql_operator.py  talend_operator.py
moto-src/: Dockerfile
moto-src/dump/: motodata.exp
moto-src/scripts/: 01_SRC_MOTO_SALES_BUILD_SCR_SCHEMA.sql  02_SRC_MOTO_SALES_INIT_SRC_DATA.sql  03_SRC_MOTO_MKTG_BUILD_SRC_SCHEMA.sql  04_SRC_MOTO_MKTG_INIT_SRC_DATA.sql
pg-target/: init.sql
